font fix: firefox/chrome didn't like Bickley .ttf Stackoverflow suggested .woff format. Woff wadded.

--- a/Pincus_Home_page/Military_Registration_-_Translation_files/Military_Registration_-_Translation.css
+++ b/Pincus_Home_page/Military_Registration_-_Translation_files/Military_Registration_-_Translation.css
@@ -1,6 +1,7 @@
 @font-face {
     font-family: 'BickleyScriptLetPlain';
-    src: url('../../fonts/BickleyScriptLetPlain.ttf') format('truetype');
+    src: url('../../fonts/BickleyScriptLetPlain.woff') format('woff'),
+         url('../../fonts/BickleyScriptLetPlain.ttf') format('truetype');
 }
 .Body {
     color: #463c3c;
